--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,11 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"   integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
       crossorigin="anonymous">
     <link rel="stylesheet" href="https://map.perl6.party/sort.css">
+    <style>
+      .toast-status a {
+          /*display: block;*/
+      }
+    </style>
   </head>
   <body>
     <div class="container">
@@ -52,14 +57,13 @@
                     ><%= $m.key %></a></td>
                   <td><%= $m.value<burnt> ?? 'Burnt' !! ''  %></td>
                   <td><%= $m.value<unsucced> ?? 'Unsucced' !! '' %></td>
-                  % for @($s<commits>) {
-                    % if ($m.value{$_}//'') eq 'Succ' {
-                      <td class="success"><%= $m.value{$_}//'' %></td>
-                    % } elsif ($m.value{$_}//'') eq 'Fail' {
-                      <td class="danger"><%= $m.value{$_}//'' %></td>
-                    % } else {
-                      <td class="warning"><%= $m.value{$_}//'' %></td>
-                    % }
+                  % for @($s<commits>) -> $commit {
+                    % my $status = $m.value{$commit} // 'Unknown';
+                    % my $class =  $status eq 'Succ' ?? 'success'
+                    %    !! $status eq 'Fail' ?? 'danger'  !! 'warning';
+                    <td><a class="btn btn-block btn-<%= $class %>"
+                      href="/module?module=<%= $m.key
+                      %>&amp;commit=<%= $commit %>"><%= $status %></a></td>
                   % }
               </tr>
             % }
